Modular java 9